4.5 -> 5.0:
    - jbj: debugedit segfault (#336951,#337011) see #337051 too.
    - jbj: commit to hge(h, he, ...) extraction in API. ABI not yet.
    - jbj: remove the pointless ;-) indirection in *(HE_t) for type/count.
    - jbj: drill rpmTagData everywhere.
    - jbj: start regularizing hae/hme calls.
    - jbj: drill rpmTagCount everywhere.
    - jbj: change hPTR_t to hRET_t in ABI, revert to const void * in API.
    - jbj: drill hPTR_t through prototypes. hRET_t * refactor next.
    - jbj: drill rpmTagCount through rpmdb/* files.
    - jbj: preliminaries to encapsulate headerSprintf goop.
    - rpm.org: Fix broken doxygen comment.
    - rpm.org: Don't unnecessarily include stdio.h
    - jbj: extract verifyscript when available. more to do ...
    - jbj: fix: %verifyscript broken by scaremem elimination.
    - jbj: another missed level of indirection. leave the bandaid, won't hurt.
    - jbj: bandaid for a --import hge recursion problem. real fix soon.
    - jbj: fix: missed a level of indirection.
    - bero: Initialize arch and os in rpmtsAddInstallElement, fixing crash when
      installing a src.rpm
    - jbj: fix: typo broke i32p indices when sizeof(void *) != sizeof(int_32).
    - jbj: add RPM_INT64_TYPE rpmdb indices (untested).
    - jbj: ah, there's the rpmdb basenames memory leak (but leave disabled).
    - jbj: mark (and disable) rpmv3 Provides: N = E:V-R retrofit.
    - jbj: mark (and disable) rpmv3 basenames hacks (likely fixing rpmdb leak).
    - jbj: ditto for python/* too.
    - jbj: for now, revert to headerGetEntry where needed, avoid recursions.
    - jbj: drill HE_t down through the header extension tags.
    - jbj: drill rpmTagType everywhere.
    - jbj: move rpmTag typedef and HGE_t et al protos to header.h.
    - jbj: lose the rpmfi hge/hae/hme/hre/hfd vectors.
    - jbj: yet more hge fixups.
    - jbj: reqprov.c: use headerGetExtension everywhere.
    - jbj: parsePreamble.c: use headerGetExtension everywhere.